Limpieza de back, correccion de bug en front